yoshimi 1.5.3 M

2017-9-7 Will
* Completed filter transfer.
* Improved formant tooltips.

2017-9-5 Will
* Corrected last three dates here :(
* Created noboost branch.
[noboost] reverted note-offs to delete.
[noboost] removed all references to boost.

2017-9-4 Will
* Effects transferred to lock free.
  Noticed long-standing anomally with some dynfilter
  control only working on release.
* Filters mostly transferred to lock free.
  Some formant controls not done yet.

2017-9-1 Will
* BugFix: Oscillator phase was screwed up :(
* Removed redundant code from PadSynth UI.
* Preparing Filters for conversion.

2017-8-31 will
* Cleaned up Sys/Ins controls.
* Added cleanup when Ins destination set to 'off'.
* Yet more doc updates :P

2017-8-30 Will
* BugFix: Disabling a part was resetting all controllers.
* Doc updates.
* Sys/Ins effect controls now transferred to lock free.
  But could be improved.

2017-8-29 Will
* All rotary controllers now MIDI learnable.

2017-8-28 Will
* CLI can now save PadSynth sample sets.
* Failure to save PadSynth sample sets now reported.
* Updated docs.
* Removed reundant code.
* Removed unnecessary mutex lock in Pad apply.
* Fixed regression 'apply' in GUI oscillator.
* Oscillator converted to lock-free (phew!)
  Alse corrected ancient anomally where base
  function wasn't changed with 'Use as base".

2017-8-26 Will
* Adjusted logging on memory error merge from Iurie.

2017-8-25 Will
* Removed duplicated effects command from GUI.
* PadSynth conversion completed.
* Fixed regression - AddVoice bend adjust not working.

2017-8-24 Will
* Corrected GUI value for CLI resonance centre freq.
* Resonance converted to lock-free.
* Preparing PadSynth for conversion.

2017-8-22 Will
* More speeling chucks :(

2017-8-21 Will
* Final clean-up.
* Final doc updates.
* Set Version 1.5.3 release.

2017-8-20 Will.
* Improved state saving extension checks.
  This whole area needs looking at.
* Set Version 1.5.3 rc4

2017-8-19 Will.